fix: Fix hand cardpool counter alignment

--- a/src/BlazorCardGame.WebUI/Components/PlayArea/CounterComponent.razor.css
+++ b/src/BlazorCardGame.WebUI/Components/PlayArea/CounterComponent.razor.css
@@ -1,3 +1,3 @@
-.raised {
+.raised-text {
     margin-top: -10px;
 }
